# Sewer-FOG-Monitoring-Network

./: CMakeLists.txt  README.md
dashboard/: package.json  tsconfig.json
dashboard/public/: index.html
dashboard/src/: api.ts  main.tsx
dashboard/src/components/: Layout.tsx  ReachDetail.tsx  ReachSummary.tsx  RiskMap.tsx
edge-gateway/: CMakeLists.txt
edge-gateway/include/: BufferStore.hpp  CloudForwarder.hpp  GatewayConfig.hpp  IngressServer.hpp  NodeRegistry.hpp
edge-gateway/src/: BufferStore.cpp  CloudForwarder.cpp  GatewayConfig.cpp  IngressServer.cpp  NodeRegistry.cpp  main.cpp
firmware/node/: CMakeLists.txt
firmware/node/include/: MqttPublisher.hpp  NodeConfig.hpp  PacketEncoder.hpp  Sensors.hpp
firmware/node/src/: MqttPublisher.cpp  NodeConfig.cpp  PacketEncoder.cpp  Sensors.cpp  main.cpp
integrations/ai-chat/: CMakeLists.txt
integrations/ai-chat/include/: ChatConfig.hpp  ChatServer.hpp
integrations/ai-chat/src/: ChatConfig.cpp  ChatServer.cpp  main.cpp
qpudatashards/particles/: SewerFOGNodesPhoenix2026v1.csv
server/api/: CMakeLists.txt
server/api/include/: ApiConfig.hpp  Database.hpp  FogImpactService.hpp  IngestController.hpp  QueryController.hpp
server/api/src/: ApiConfig.cpp  Database.cpp  FogImpactService.cpp  IngestController.cpp  QueryController.cpp  main.cpp
src/analytics/: OverflowPredictor.cpp  OverflowPredictor.hpp
src/core/: FogImpactModel.cpp  FogImpactModel.hpp
src/integrations/: ChatAdapter.cpp  ChatAdapter.hpp
src/io/: SensorPacket.cpp  SensorPacket.hpp
